--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
+    "node-schedule": "^1.3.0",
     "pug": "^2.0.0-rc.1",
     "request": "^2.83.0"
   },
